# rudn-year3-graphics

./: Cargo.toml  Makefile  README.md
lab2/: Makefile  README.md  scene.py
lab3/rasterizer/: Cargo.toml
lab3/rasterizer/src/: cube.stl  icosahedron.stl  main.rs  math.rs  shapes.rs  tetrahedron.stl  world.rs
lab3/vr-rasterizer/: Cargo.toml
lab3/vr-rasterizer/src/: Makefile  debug_pattern.frag  debug_pattern.frag.spv  fullscreen.vert  fullscreen.vert.spv  main.rs
