[package]
name = "rasterizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bresenham = "0.1.1"
embedded-graphics = "0.8.1"
error-iter = "0.4"
log = "0.4"
nalgebra = "0.32.3"
obj = "0.10.2"
pixels = "0.13.0"
rand = { version = "0.8.5", features = ["small_rng"] }
stl_io = "0.7.0"
triangulate = "0.2.0"
winit = "0.28"
winit_input_helper = "0.14"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["GpuTextureFormat"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"
pollster = "0.3"

