[package]
name = "vr-rasterizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.37.3"
beryllium = "0.13.1"
ctrlc = "3.4.1"
openxr = "0.17.1"
wgpu = { version = "0.14.0", features = ["spirv"] }
wgpu-hal = "0.14.0"